<resources>
    <string name="app_name">AndroidProject1</string>
    <string name="speed_mode">Speed Mode</string>
    <string name="tilt_mode">Tilt Mode</string>
    <string name="start">Start</string>
    <string name="back_to_menu">Back to menue</string>
    <string name="score">Score:</string>
    <string name="_0000">0000</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="score_0000">Score : 0000</string>
    <string name="map_view_desc">Map showing location of last score</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="name_na_score_na">Name:NA Score:NA</string>
    <string name="player_name">Player name:</string>
    <string name="player">Player</string>
    <string name="_1000">1000</string>
    <string name="_1">1</string>

</resources>