<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background"
    android:orientation="horizontal"
    android:padding="12dp"
    android:layout_marginVertical="6dp" >

    <TextView
        android:id="@+id/item_score_rank"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="#555"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_score_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:text="@string/player"
        android:textColor="#333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>