<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0063D4"
        android:scaleType="centerCrop">
    </androidx.appcompat.widget.AppCompatImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="24dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_speed_mode"
            style="@style/Widget.Material3.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/speed_mode"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#6200EE"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:textStyle="italic|bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tilt_mode"
            style="@style/Widget.Material3.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/tilt_mode"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#018786"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:textStyle="italic|bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            style="@style/Widget.Material3.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="50sp"
            android:textColor="@color/white"
            app:cornerRadius="24dp"
            android:backgroundTint="#D32F2F"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:textStyle="italic|bold"/>


    </LinearLayout>


</RelativeLayout>